src/syntax/tests/data/positive/literals/functions.hsh
function ()
	function(a, b, c)
		"here"
		"be"
		"my body"
	end

	function (a,)
		[
			function () function () function () function () function () end end end end end,
			@[ fun: function () end ]
		]
	end
end
