src/syntax/tests/data/negative/duplicate-params.hsh
function test(a, b, c, a, d)
end
